Fix gh-pages margin, fix hero image overflow.

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@
 body {
   display: flex;
   background-color: #faedd1;
+
+  /* GitHub Pages fix */
+  margin: 0%;
 }
 
 main {
@@ -63,6 +66,7 @@ button {
 .hero-img {
   overflow: hidden;
   border-right: solid 10px #a59570;
+  height: 100vh;
 }
 
 .title {
